--- a/teaching.html
+++ b/teaching.html
@@ -234,10 +234,17 @@
       .content {
         flex-direction: column;
         padding: 20px;
+        gap: 20px;
       }
-      .teaching-left, .teaching-right {
-        flex: 1 1 100%;
+      .teaching-left {
+        width: 100%;
         min-width: 100%;
+        margin-bottom: 0;
+      }
+      .teaching-right {
+        width: 100%;
+        min-width: 100%;
+        margin-top: 0;
       }
     }
   </style>
