--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                             
                             <div class="col-6">
                                 <div class="grid-item glossy-grid-item">
-                                    <a href="https://damaris-guzman.github.io/portfolio/archive.html">
+                                    <a href="https://damaris-guzman.github.io/portfolio/data-trust.html">
                                         <img src="images/ica-locket.png" alt="ICA: Data Trust" class="w-100 h-100" style="object-fit: cover;">
                                         <div class="overlay-text">ICA: Data Trust</div>
                                     </a>
