--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
         <div class="col-lg-4">
             <div class="sidebar frosted-sidebar" data-bs-toggle="tooltip" data-bs-placement="top" title="Welcome!">
                 <img src="https://damarisguzman.neocities.org/Portfolio/maris%20is%20in.png" alt="Your Image" class="img-fluid rounded shadow-sm">
-                <p class="mt-3">Hi, it's so good to see you! Welcome to my portfolio site :) Every day I see my dream, so I invite you to see it too. Thank you for visiting! @grill0101</p>
+                <p class="mt-3" style="margin-left: 15px;">Hi, it's so good to see you! Welcome to my portfolio site. Every day I see my dream, so I invite you to see it too.</p> 
+                <p style="margin-left: 15px;">Thank you for visiting! ٩(◕‿◕｡)۶</p>
 
                 <div class="cute-box">
                     <a href="https://damaris-guzman.github.io/portfolio/CV.html" class="glossy-btn" data-bs-toggle="tooltip" title="Learn more about me">
@@ -369,7 +370,7 @@
 </div>
 
 <div class="footer frosted-footer mt-auto">
-    <p class="mb-0"><i class="bi bi-c-circle me-1"></i>2025 DAMARIS GUZMAN <i class="bi bi-heart-fill ms-2" style="color: #ff6f91;"></i></p>
+  <p class="mb-0"><i class="bi bi-c-circle me-1"></i>2026 DAMARIS GUZMAN @grill0101<i class="bi bi-heart-fill ms-2" style="color: #ff6f91;"></i></p>
 </div>
 
 <!-- Bootstrap JS -->
