--- a/dream.html
+++ b/dream.html
@@ -906,7 +906,7 @@
 
         <!-- Additional Text Box -->
         <div class="gallery-description" style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 30px;">
-          <p>I also printed miniature versions to function as charms for kandi bracelets I made. In the gallery, these bracelets were available for free, but donations were encoouraged. :) </p>
+          <p>I also printed miniature versions to function as charms for kandi bracelets I made. In the gallery, these bracelets were available for free, but donations were encouraged. :) </p>
         </div>
       </div>
     </div>
