--- a/dream.html
+++ b/dream.html
@@ -735,6 +735,11 @@
                    style="margin-top:10px; text-align:center; background-color:#fff; border:2px solid var(--pink-2); border-radius:10px; padding:15px; cursor:pointer;">
                 Exhibited in the Black Gallery in the Art building @ SJSU 11/12/2025 - 11/20/2025
               </div>
+
+              <!-- Gallery Link -->
+              <a href="https://newart.city/show/everyday-isee-my-dream" target="_blank" style="display: block; margin-top: 15px;">
+                <img src="gifs/gallery-blink.gif" style="width: 100%; height: auto; border: none; background: none; cursor: pointer;" alt="Gallery">
+              </a>
             </div>
           </div>
         </div>
@@ -906,7 +911,7 @@
 
         <!-- Additional Text Box -->
         <div class="gallery-description" style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 30px;">
-          <p>I also printed miniature versions to function as charms for kandi bracelets I made. In the gallery, these bracelets were available for free, but donations were encouraged. :) </p>
+          <p>I also printed miniature versions to function as charms for kandi bracelets I made. In the gallery, these bracelets were available for free, but donations were encoouraged. :) </p>
         </div>
       </div>
     </div>
